NetBSD Problem Report #41015

From apb@cequrux.com  Sat Mar 14 15:00:51 2009
Return-Path: <apb@cequrux.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 1028763BAB8
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 14 Mar 2009 15:00:51 +0000 (UTC)
Message-Id: <20090314145622.1DE78E94DB5@apb-laptoy.apb.alt.za>
Date: Sat, 14 Mar 2009 14:56:22 +0000 (UTC)
From: apb@cequrux.com
To: gnats-bugs@gnats.NetBSD.org
Subject: vnd driver does not implement DIOCCACHESYNC
X-Send-Pr-Version: 3.95

>Number:         41015
>Category:       kern
>Synopsis:       vnd driver does not implement DIOCCACHESYNC
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Mar 14 15:05:00 +0000 2009
>Closed-Date:    Sat Apr 04 17:27:37 +0000 2009
>Last-Modified:  Sat Apr 04 17:27:37 +0000 2009
>Originator:     Alan Barrett
>Release:        NetBSD 5.99.7
>Organization:
Not much
>Environment:
System: NetBSD 5.99.7 i386
>Description:
	The DIOCCACHESYNC ioctl is undocumented, but wapbl(4) relies on
	it to flush the disk cache.  The vnd driver does not implement
	this ioctl, so crashes while writing to a file system on a vnd
	are likely to encounter more corruptioon than they should.
>How-To-Repeat:
	Code inspection
>Fix:
	A DIOCCACHESYNC at the vnd level should become an fsync(2),
	fdatasync(2), or fsync_range(2), on the underlying file,
	with the FDISKSYNC flag set.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: apb@NetBSD.org
State-Changed-When: Sat, 04 Apr 2009 17:27:37 +0000
State-Changed-Why:
fixed and pulled up to netbsd-5


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.