PR/41015: Alan Barrett: vnd driver does not implement DIOCCACHESYNC